--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test Suite
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ 'master' ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ 'master' ]
 
 jobs:
   lint:
@@ -14,7 +14,7 @@ jobs:
       matrix:
         # Support only LTS and Current build of node
         # See https://github.com/nodejs/Release
-        node-version: [ 12.x, 14.x, 16.x, 18.x, 20.x ]
+        node-version: [ 18.x ]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -45,10 +45,10 @@ jobs:
   cover:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [ 'lint' ]
+    needs: [ 'lint', 'test' ]
     strategy:
       matrix:
-        node-version: [ 12.x, 14.x, 16.x, 18.x, 20.x ]
+        node-version: [ 18.x ]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
